# neuana

./: .gitignore  CMakeLists.txt  README.md
include/: Analysis.h
lib/: Analysis.cpp  CMakeLists.txt
tests/: CMakeLists.txt  scalar.cpp  test1.cpp  vector2d.cpp
